# qetf

./: .gitignore  AGENT_WORKFLOW.md  BASH_SCRIPTS_SUMMARY.md  CLAUDE_CONTEXT.md  EMAIL_SUMMARY_2026-01-09.txt  LICENSE  NEXT_STEPS.md  OPTIMIZATION_RESULTS.md  PHASE3_PLAN.md  PROGRESS_LOG.md  PROJECT_BRIEF.md  PROJECT_STATUS.md  README.md  SESSION_INDEX.md  SESSION_NOTES_2026-01-09.md  STATUS.md  TASKS.md  TIER5_COMPLETE_SUMMARY.md  do_commit_impl019.py  monitor_validation.py  plan.md  pyproject.toml  session-starter-template.md  test_cash_fix.py
artifacts/: README.md
configs/: README.md
data/: README.md
docs/: ETF_UNIVERSE_TIERS.md  STRATEGY_COMPARISON_GUIDE.md  STRATEGY_RESEARCH_PLAN.md  TERMINAL_OPERATIONS_GUIDE.md  UNIVERSE_QUICK_REF.md
handoffs/: ARCHITECTURE_PLANNING_EXECUTIVE_SUMMARY.md  DATA_ACCESS_LAYER_PLANNING_INDEX.md  IMPL-007-DATA-INGESTION.md  IMPL-016-SUMMARY.md  IMPL-PRODUCTION-PORTFOLIO-SYSTEM.md  IMPLEMENTATION_TASKS_DATA_ACCESS_LAYER.md  MERGE-REPORT-IMPL-015-016.md  PERFORMANCE_ANALYSIS_REFACTOR.md  PHASE3_QUICKSTART.md  README.md  REFACTOR-001-IMPLEMENTATION-PLAN.md  RESEARCH-001-REGIME-HYPOTHESIS.md  RESEARCH-FINDINGS-STRATEGY-OPTIMIZATION.md  TEMPLATE-COMPLETION.md  completion-IMPL-002.md  completion-IMPL-003.md  completion-IMPL-004.md  completion-IMPL-018.md  completion-IMPL-019.md  completion-IMPL-021.md  completion-TEST-001.md  completion-VIZ-001.md  handoff-ANALYSIS-007.md  handoff-IMPL-003.md  handoff-IMPL-004.md  handoff-IMPL-005.md  handoff-IMPL-016-ALPHA-SELECTOR.md  handoff-IMPL-018-REGIME-ALPHA-INTEGRATION.md  handoff-INFRA-002.md
(+791 files in other folders)
